--- a/rede_petri_alpha_pm.ipynb
+++ b/rede_petri_alpha_pm.ipynb
@@ -1,20 +1,10 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "from IPython.display import display, HTML"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"C:\\Users\\55489\\Pictures\\escoladeadmcabecalho.png\" alt=\"Escola de Administração UFPR\" style=\"width:300px;height:200px;\">\n",
+    "<img src=\"images/escoladeadmcabecalho.png\" alt=\"Escola de Administração UFPR\" style=\"width:600px;height:200px;\">\n",
     "\n",
     "## **Process Mining - PPGMNE:**  \n",
     "\n",
@@ -32,7 +22,7 @@
     "\n",
     "2) Considere a rede de Petri a seguir:\n",
     "\n",
-    "<img src=\"C:\\Users\\55489\\Pictures\\processmining.png\" alt=\"Rede de Petri Exercicio 2\" style=\"width:300px;height:200px;\">\n",
+    "<img src=\"images/processmining.png\" alt=\"Rede de Petri\" style=\"width:400px;height:200px;\">\n",
     "\n",
     "* i) Obtenha o log de eventos completo para esta rede.\n",
     "\n",
